# Ser_Robot

./: README.md
j2n6s300_moveit_config/config/: sensors_3d.yaml  ser_robot.srdf
j2n6s300_moveit_config/launch/: j2n6s300_demo.launch  j2n6s300_moveit_sensor_manager.launch.xml  move_group_j2n6s300.launch  moveit.rviz  moveit_rviz.launch  planning_context.launch  sensor_manager.launch.xml
kinova_description/launch/: display_ser_robot_rviz.launch
kinova_description/urdf/: ser_robot.xacro  ser_robot_base.xacro
my_plan/: CMakeLists.txt  package.xml
my_plan/include/: mobile_base.h  my_pick_place.h
my_plan/launch/: draw_retangle.launch  my_moveit.launch  my_pick_place.launch
my_plan/src/: draw_retangle.cpp  jiance2.cpp  main.cpp  mobile_base.cpp  my_pick_place.cpp  tf_listen_example.cpp
